Bug 960243 - Try to fetch m frames such that there will be n frames after resampling which will fit into an Opus packet duration perfectly. r=rillian