content/media/encoder/OpusTrackEncoder.h
@@ -74,6 +74,12 @@ private:
    * resampled.
    */
   SpeexResamplerState* mResampler;
+
+  /**
+   * Store the resampled frames that don't fit into an Opus packet duration.
+   * They will be prepended to the resampled frames next encoding cycle.
+   */
+  nsTArray<AudioDataValue> mResampledLeftover;
 };
 
 }
